--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div>
         <h1>이번 달 수진이 월급</h1>
         <p>축하합니다 <span>50,000,000원</span>을 드립니다!</p>
+        <img src="https://m.meme.co.kr/web/product/big/202102/f06a3b34032b2b160658ee63c4f67d23.jpg">
     </div>
 </body>
 </html>
