--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
  <link rel="stylesheet" href="style.css">
     <div>
-        <h1>이번 달 수진이 월급</h1>
-        <p>축하합니다 <span>50,000,000원</span>을 드립니다!</p>
-        <img src="https://m.meme.co.kr/web/product/big/202102/f06a3b34032b2b160658ee63c4f67d23.jpg">
+        <h1>우와아아아</h1>
+        <p>로또에 당첨 됐습니다 축하합니다 <span>999,999,999,999원</span>을 드립니다!</p>
+        <img src="https://media.istockphoto.com/id/1153719403/photo/black-afro-american-girl-won-money-happy-young-woman-holding-dollar-currency-satisfied.jpg?s=612x612&w=0&k=20&c=kZFo0gg4PcvvAGaIxjqC83e7LWwVW2JOXgSlC0BSEMs=">
     </div>
 </body>
 </html>
