--- a/index.html
+++ b/index.html
@@ -6,11 +6,21 @@
     <title>Document</title>
 </head>
 <body>
- <link rel="stylesheet" href="style.css">
-    <div>
-        <h1>우와아아아</h1>
-        <p>로또에 당첨 됐습니다 축하합니다 <span>999,999,999,999원</span>을 드립니다!</p>
-        <img src="https://media.istockphoto.com/id/1153719403/photo/black-afro-american-girl-won-money-happy-young-woman-holding-dollar-currency-satisfied.jpg?s=612x612&w=0&k=20&c=kZFo0gg4PcvvAGaIxjqC83e7LWwVW2JOXgSlC0BSEMs=">
+    <link rel="stylesheet" href="style.css">
+    
+    <div id="container">
+        <div id="gameBox">
+            <span>Hello!<br>
+            This is Baseball game!<br>
+            you have 10 lives!<br>
+            Let's try it!</span>
+        </div>
+        <div id="inputBox">
+            <input type="text" id="inputNumber">
+            <button id="submit">히릿!</button>
+        </div>
+        <div id="warningMsg"></div>
     </div>
+    <Script src="main.js"></Script>
 </body>
 </html>
