--- a/index.html
+++ b/index.html
@@ -10,16 +10,12 @@
 
     <div id="container">
         <div id="inputSection"></div>
-        <input type="text" list="airportList" id="airportId" placeholder="Enter Airport ID" inputmode="numeric" pattern="[0-9]*"/>
+        <input type="text" list="airportList" id="airportId" placeholder="Enter ICAO Airport Code" class="inputData"/>
         <datalist id="airportList"></datalist>
-        <select name="presetTemp" id="presetTemp"></select>
-        <input type="text" id="airportAlt" placeholder="Airport Altitude" inputmode="numeric" pattern="[0-9]*"/>
-        <input type="text" id="airportTemp" placeholder="Airport Temperature" inputmode="numeric" pattern="[0-9]*"/>
-        <input type="text" id="firstAlt" placeholder="Fix1 Altitude" inputmode="numeric" pattern="[0-9]*"/>
-        <div id="firstAltCorr"></div>
-
-        <button id="altCalc">계산!</button>
-        <div id="calculation"></div>
+        <input type="text" id="airportAlt" placeholder="Airport Altitude" inputmode="numeric" pattern="[0-9]*" class="inputData"/>
+        <input type="text" list="airportTempList" id="airportTemp" placeholder="Airport Temperature" inputmode="numeric" pattern="[0-9]*" class="inputData"/>
+        <datalist id="airportTempList"></datalist>
+        <div id="inputFixList"></div>
     </div>
 
     <script src="main.js"></script>
