--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <p>ICAO Airport Code</p>
         <input type="text" list="airportList" id="airportId" placeholder="Enter Airport Code"/>
         <datalist id="airportList"></datalist>
-        <input type="text" id="airportAlt" placeholder="Airport Altitude" inputmode="numeric" pattern="[0-9-]*" class="inputData"/>
+        <input type="tel" id="airportAlt" placeholder="Airport Altitude" inputmode="numeric" pattern="[0-9-]*" class="inputData"/>
         <p>Airport Temperature</p>
-        <input type="text" list="airportTempList" id="airportTemp" placeholder="Airport Temperature" inputmode="numeric" pattern="[0-9-]*" class="inputData"/>
+        <input type="tel" list="airportTempList" id="airportTemp" placeholder="Airport Temperature" inputmode="numeric" pattern="[0-9-]*" class="inputData"/>
         <datalist id="airportTempList"></datalist>
         <p>Indicated Altitude</p>
         <div id="inputFixList"></div>
