--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <datalist id="airportList"></datalist>
         <input type="tel" id="airportAlt" placeholder="Airport Altitude" inputmode="numeric" pattern="[0-9-]*" class="inputData"/>
         <p>Airport Temperature</p>
-        <input type="tel" list="airportTempList" id="airportTemp" placeholder="Airport Temperature" inputmode="numeric" pattern="[0-9-]*" class="inputData"/>
+        <input type="tel" list="airportTempList" id="airportTemp" placeholder="Airport Temperature" class="inputData"/>
         <datalist id="airportTempList"></datalist>
         <p>Indicated Altitude</p>
         <div id="inputFixList"></div>
